tests/expectations/parser-expression/expression/path.out
{
  "Path": {
    "qualifier": [
      {
        "name": "x",
        "span": {
          "lo": 0,
          "hi": 1
        },
        "id": 1
      }
    ],
    "identifier": {
      "name": "y",
      "span": {
        "lo": 3,
        "hi": 4
      },
      "id": 2
    },
    "absolute_path": null,
    "span": {
      "lo": 0,
      "hi": 4
    },
    "id": 0
  }
}

{
  "Path": {
    "qualifier": [
      {
        "name": "X",
        "span": {
          "lo": 5,
          "hi": 6
        },
        "id": 1
      }
    ],
    "identifier": {
      "name": "Y",
      "span": {
        "lo": 8,
        "hi": 9
      },
      "id": 2
    },
    "absolute_path": null,
    "span": {
      "lo": 5,
      "hi": 9
    },
    "id": 0
  }
}

{
  "Path": {
    "qualifier": [
      {
        "name": "xxx",
        "span": {
          "lo": 10,
          "hi": 13
        },
        "id": 1
      }
    ],
    "identifier": {
      "name": "xxx",
      "span": {
        "lo": 15,
        "hi": 18
      },
      "id": 2
    },
    "absolute_path": null,
    "span": {
      "lo": 10,
      "hi": 18
    },
    "id": 0
  }
}

{
  "Path": {
    "qualifier": [
      {
        "name": "XXX",
        "span": {
          "lo": 19,
          "hi": 22
        },
        "id": 1
      },
      {
        "name": "YYY",
        "span": {
          "lo": 24,
          "hi": 27
        },
        "id": 2
      }
    ],
    "identifier": {
      "name": "ZZZ",
      "span": {
        "lo": 29,
        "hi": 32
      },
      "id": 3
    },
    "absolute_path": null,
    "span": {
      "lo": 19,
      "hi": 32
    },
    "id": 0
  }
}

Error [EPAR0370005]: expected '.' -- found '::'
    --> test_4:1:5
     |
   1 | self::y
     |     ^^
